<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:labelFor="@id/task_title_input"
        android:text="@string/task_title_txt"
        android:textSize="25sp"
        android:layout_marginRight="20dp" />

    <EditText
        android:id="@+id/task_title_input"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/task_title_txt"
        android:hint="@string/task_title"
        android:inputType="text"

        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/task_desc"
        android:text="@string/task_description_txt"

        android:textSize="25sp" />

    <EditText
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="@string/task_description_edit"
        android:hint="@string/task_description_edit"
        android:inputType="text"

        tools:ignore="LabelFor"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_state1"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <TextView
        android:id="@+id/Teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Task Team :"
        android:textSize="25sp" />
    <Spinner
        android:id="@+id/spinnerTeam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <TextView
        android:id="@+id/file_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="File Type :"
        android:textSize="25sp" />
    <Spinner
        android:id="@+id/spinnerFileType"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        />
<!--    android:spinnerMode="dialog"-->
    <Button
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/add_task_btn" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <Button
            android:id="@+id/goHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1sp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="1dp"
            android:baselineAligned="false"
            android:text="@string/go_home" />

        <Button
            android:id="@+id/go_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="45dp"
            android:text="@string/go_details" />

        <Button
            android:id="@+id/uploada_btn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|end"
            android:text="Upload" />

</LinearLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="14dp"
        android:labelFor="@id/total_task_no"
        android:text="@string/total_task" />

    <NumberPicker
        android:id="@+id/total_task_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="132dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="60dp" />

</LinearLayout>