...
        android:layout_marginTop="39dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="29dp"
        android:text="@string/new_user_name"
        app:layout_constraintBottom_toTopOf="@+id/team_member"
        app:layout_constraintEnd_toStartOf="@+id/username_edit_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_member"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_txt_view"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/save_username_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="162dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="162dp"
...
